# CIDEPINT-App

./: .gitignore  .tool-versions  README.md
admin/: .env  .env.example  app.py  pyproject.toml  requirements.txt
admin/src/core/: bcrypt.py  database.py  jwt.py  mail.py  oauth.py
admin/src/core/api/: __init__.py  auth.py  getUsers.py  institution.py  service.py  service_request.py  site_config.py  user.py
admin/src/core/common/: __init__.py  dataclasses_permissions.py  decorators.py  register_validation.py  roles.py  serializers.py  validation_plantilla.py  validators.py
admin/src/core/controllers/: __init__.py  auth_controller.py  configuration_controller.py  error_controller.py  home_controller.py  institution_controller.py  institutions_config_controller.py  register_controller.py  service_request_controller.py  services_controller.py  site_config_controller.py  user_controller.py  users_config_controller.py
admin/src/core/models/: __init__.py  base_model.py  hashed_email.py  institution.py  privileges.py  service.py  site_config.py  user.py  user_role_institution.py
admin/src/core/routes/: user_routes.py
admin/src/core/schemas/: __init__.py  institution.py  service.py  service_request.py  site_config.py  user.py
admin/src/web/: __init__.py  config.py
admin/static/css/: error.css  maintenance.css  style.css
admin/static/js/: changePassword.js  closeMessage.js  configFormValidation.js  formValidations.js  institutionModals.js  leafletMap.js  openModal.js  roles.js  serviceModals.js  serviceRequestModals.js  userModals.js
calculator/: main.py
(+168 files in other folders)
